# fastapi-redis

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
tests/: conftest.py  test_redis.py
